@@ -4,3 +4,4 @@ MANIFEST
 Makefile.PL
 README
 lib/Apache/Session/Counted.pm
+t/loadme.t
