@@ -1,0 +1,10 @@
+#!/usr/bin/perl -w
+
+BEGIN {
+    print "1..1\n";
+}
+use strict;
+use Apache::Session::Counted;
+
+print "ok 1\n";
+
